--- a/ConsoleRPG/ConsoleRPG.vcxproj
+++ b/ConsoleRPG/ConsoleRPG.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="Armor.cpp" />
     <ClCompile Include="Console.cpp" />
+    <ClCompile Include="Enemies.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Inventory.cpp" />
@@ -131,6 +132,7 @@
     <ClInclude Include="Armor.h" />
     <ClInclude Include="commonInc.h" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="Enemies.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Inventory.h" />
